retrieveUnpackaged/objects/TestA__c.object
<CustomObject>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TESTEREQ__c</fullName>
        <label>TESTEREQ</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestBontestA__c</fullName>
        <label>TestBontestA</label>
        <referenceTo>TestB__c</referenceTo>
        <relationshipLabel>TestAs</relationshipLabel>
        <relationshipName>TestAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Val__c</fullName>
        <label>Test Val</label>
        <picklist>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Testencrypt__c</fullName>
        <label>Testencrypt</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_and_time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_now__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>date_now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testrich__c</fullName>
        <label>testrich</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testtext__c</fullName>
        <displayFormat>H-{000}</displayFormat>
        <label>testtext</label>
        <type>AutoNumber</type>
    </fields>
    <label>TestA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Testencrypt__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TestBontestA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TestA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>testrule</fullName>
        <active>true</active>
        <errorConditionFormula>Testencrypt__c  = &apos;TESTESTESTE&apos;</errorConditionFormula>
        <errorMessage>Error...dude...whats is it...</errorMessage>
    </validationRules>
</CustomObject>